added more server logic. game not running yet

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <body>
 <script src="socket.io-1.2.0.js"></script>
 <script src="jquery-1.11.1.js"></script>
+<input type="button" value="setUserName" id='user' onclick="setUserName()">
 <div style="width:200px;height:200px">Table here</div>
 <div id='cards-container'>
     <table>
