--- a/index.html
+++ b/index.html
@@ -30,8 +30,11 @@
         background-color: #4CAF50;
         color: white;
     }
-    .card-container input[type="button"]{
-          display: none;
+    .card-container{
+        padding-top: 3px;
+        padding-bottom: 0px;
+        background-color: yellow;
+        color: yellow;
     }
     .own-player{
         background-color: white;
