--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     .own-player{
         background-color: white;
         color : black;
-        border: 1px double green;
+        border: 2px double green;
         border-width: 2px 2px 0 2px;
     }
     @keyframes blink {
@@ -59,6 +59,8 @@
     }
     .curr-player { /*or other element you want*/
         animation: blink .5s step-end infinite alternate;
+        border-width: 2px 2px 2px 2px;
+        border: 2px double green;
     }
 </style>
 </body>
