--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <head></head>
 <body>
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s); js.id = id;
+    js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.5";
+    fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 <input type="button" value="setUserName" id='user' onclick="login()">
 <table>
     <tr id='players'></tr>
 </table>
 <div id='cards'>
     <table>
-        <tr id='cards-container'></tr>
+        <tr></tr>
+        <td id='cards-container'></td>
     </table>
 </div>
 <table id='turn-container'><tr>
@@ -25,9 +34,9 @@
 <textarea id='events' rows="" cols=""></textarea>
 <script>
     //for dev env only
-    if(location.host.indexOf('localhost') === 0){
+    /*if(location.host.indexOf('localhost') === 0){
         alert = console.log.bind(console);
-    }
+    }   */
 </script>
 <script src="jquery-1.11.1.js"></script>
 <script src="jquery.twinkle-0.8.0.min.js"></script>
@@ -63,5 +72,7 @@
         border: 2px double green;
     }
 </style>
+<a href="https://github.com/sktguha/bluff" target="_blank"><img style="position: absolute; bottom: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/8b6b8ccc6da3aa5722903da7b58eb5ab1081adee/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f6f72616e67655f6666373630302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_left_orange_ff7600.png"></a>
+<div class="fb-comments" data-href="http://sktguha.dlinkddns.com:7000" data-numposts="5"></div>
 </body>
     
