--- a/kicked.html
+++ b/kicked.html
@@ -1,1 +1,1 @@
-you have been kicked from the game from one of the players. go back to the page if you want to join game again
+you have been kicked from the game by one of the players. go back to the page if you want to join game again
