--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     </table>
 </div>
 <table id='turn-container'><tr>
-    <td><input type="button" value="pick/show"></td>
-    <td><input type="button" value="place" onclick="sendPlaceCards()"></td>
-    <td><input type="button" value="pass" onclick="sendPass()"></td>
+    <td><input type="button" value="pick/show" class='show' onclick="sendShowCards()"></td>
+    <td><input type="button" value="place" class='place' onclick="sendPlaceCards()"></td>
+    <td><input type="button" value="pass" class='pass' onclick="sendPass()"></td>
     <td>current table number <input type='text' id='currTabNo'/></td>
      <td>Number of cards on table <span id="numOfCards"></span></td>
 </tr></table>
@@ -39,9 +39,9 @@
 <textarea id='events' rows="50" cols="50"></textarea>
 <script>
     //for dev env only
-    /*if(location.host.indexOf('localhost') === 0){
+   if(false && location.host.indexOf('localhost') === 0){
         alert = console.log.bind(console);
-    }   */
+    }
 </script>
 <script src="jquery-1.11.1.js"></script>
 <script src="jquery.twinkle-0.8.0.min.js"></script>
@@ -71,10 +71,14 @@
     @keyframes blink {
    50% { border-color: #ff0000; }
     }
-    .curr-player { /*or other element you want*/
+    .curr-player {
         animation: blink .5s step-end infinite alternate;
         border-width: 2px 2px 2px 2px;
         border: 2px double green;
+    }
+    .prev-player{
+        border-width: 2px 2px 2px 2px;
+        border: 2px double yellow;
     }
 </style>
 <a href="https://github.com/sktguha/bluff" target="_blank"><img style="position: absolute; bottom: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/8b6b8ccc6da3aa5722903da7b58eb5ab1081adee/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f6f72616e67655f6666373630302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_left_orange_ff7600.png"></a>
