--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
 		background-color:#ffffff;
 	}
 	#turn-container{
-		top:80%;
+		bottom:1%;
 		z-index:999;
+        position : fixed;
 	}
     .useroptions {
         display : inline-block;
