rem fb comments for now

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 <br>
 <br>
 <div class="ui segment">
-	<div class="ui top attached label">Log Messages</div>
+	<div class="ui top attached label">Log Messages (Most recent first)</div>
 	<textarea id='events' rows="50" cols="50" disabled></textarea>
 </div>
 
@@ -189,6 +189,5 @@
         margin-left : 120px;
     }
 </style>
-<div class="fb-comments" data-href="http://bluff.herokuapp.com" data-numposts="5"></div>
 </body>
     
