added video link

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	<div class="ui raised segment">
 		<div class="sixteen column">
 			<h2 class="ui centered header">Bluff Card Game<sup>beta</sup></h2>
-            <div class="useroptions"><div class="ui blue button" id="user"></div><a href="https://cdn.rawgit.com/sktguha/bluff/master/rules.txt" target="_blank"><div class="ui blue button help-button" >Help</div></a><div class="ui blue button logout-button"  onclick="logout()">logout</div></div>
+            <div class="useroptions"><div class="ui blue button" id="user"></div><a href="https://goo.gl/dAFK0u" target="_blank"><div class="ui blue button help-button" >Video Help</div></a><div class="ui blue button logout-button"  onclick="logout()">Logout</div></div>
 		</div>
 	</div>
 </div>
