added chat sounds

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
     <script type="text/javascript"  src="clientUtil/jquery.ui.chatbox.js" ></script>
     <script src="jquery.twinkle-0.8.0.min.js"></script>
-	<script src="res/js/semantic.min.js"></script>
+	<script type="" src="https://cdnjs.cloudflare.com/ajax/libs/howler/1.1.29/howler.js"></script>
+    <script src="res/js/semantic.min.js"></script>
 	<script src="res/js/messenger.min.js"></script>
 	<style type="text/css">
 	body{
