fix fb login and added fb like

--- a/index.html
+++ b/index.html
@@ -59,7 +59,13 @@
 <br>
 <div class="ui grid">
 	<div class="eleven wide column">
-		<div class="ui submit teal button" type="submit" onclick="sendChat()"><span id='nop'></span></div>
+        <div
+                class="fb-like"
+                data-share="true"
+                data-width="300"
+                data-show-faces="true">
+        </div>
+		<div class="ui submit teal button"><span id='nop'></span></div>
 	</div>
 	<div class="five wide column">
 		<div class="ui facebook button" onclick="shareURL('facebook')">
