--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 	</style>
 </head>
 <body>
+<noscript>Javascript must be enabled in your browser for bluff to work</noscript>
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
     var js, fjs = d.getElementsByTagName(s)[0];
