multiple room shims working to some extent

--- a/roomClient.html
+++ b/roomClient.html
@@ -148,7 +148,7 @@
 <script type="text/javascript" src="clientUtil/login.js"></script>
 <script type="text/javascript" src="clientUtil/misc.js"></script>
 <script type="text/javascript" src="clientUtil/networkAndDom.js"></script>
-<script type="text/javascript" src="index.js"></script>
+<script type="text/javascript" src="clientUtil/roomClient.js"></script>
 <style type="text/css">
     .cardno {
         color:black;
