--- a/clientMain.html
+++ b/clientMain.html
@@ -27,10 +27,17 @@
         function populateRooms(table, data){
             //TODO : need to add how many players per room
            data = JSON.parse(data);
+           var iter = 0;
             data.forEach(function(d){
+                iter++;
                 var tr = document.createElement("tr");
                 $(tr).addClass("rooms");
-                $(tr).text(d);
+                var td = document.createElement("td");
+                $(td).text(iter);
+                var td1 = document.createElement("td");
+                $(td1).text(d);
+                $(tr).append(td);
+                $(tr).append(td1);
                 $(table).append(tr);
             });
             $('#roomtable').on("click", function(e){
@@ -60,7 +67,7 @@ annyang.start();
 
 <div class="row">
 <div class="ui segment">
-<center><h2>Welcome to Bluff</h2></center>
+<center><h2>Bluff Card Game<sup>beta</sup></h2></center>
 </div>
 </div><br><br>
 <div class="ui four column grid">
@@ -75,7 +82,9 @@ annyang.start();
   <input type="text" placeholder="Create/Join a Room" id='room-name'>
 </div><br><br><br>
 <center><div class="ui submit teal button" onclick = "checkRoomAndRedirect()">Create/Join</div></center>
-<table id='roomtable'></table>
+<table class="ui compact celled definition table" id='roomtable' style="cursor:pointer">
+    <thead><th>#</th><th>Room Name</th></thead>
+</table>
 </div>
 </div>
 
