--- a/roomClient.html
+++ b/roomClient.html
@@ -53,7 +53,7 @@
 	<div class="ui raised segment">
 		<div class="sixteen column">
 			<h2 class="ui centered header">Bluff Card Game<sup>beta</sup></h2>
-            <div class="useroptions"><div class="ui blue button" id="user"></div><a href="https://goo.gl/dAFK0u" target="_blank"><div class="ui blue button help-button" >Video Help</div></a><div class="ui blue button logout-button"  onclick="logout()">Logout</div></div>
+            <div class="useroptions"><div class="ui blue button" id="user"></div><a href="https://goo.gl/dAFK0u" target="_blank"><div class="ui blue button help-button" >Video Help</div></a><div class="ui red button logout-button"  onclick="logout()">Logout</div></div>
 		</div>
 	</div>
 </div>
@@ -84,7 +84,7 @@
 	</div>
  </div>
 <br>
-<table id='players'>
+Current Players: <table id='players' class="ui very compact table">
 </table>
 <br>
 
