Changed Table Dimension

--- a/roomClient.html
+++ b/roomClient.html
@@ -186,12 +186,14 @@ Current Players: <table id='players' class="ui very compact table">
         border: 2px double yellow;
     }
     #current-table {
-        width: 71%;
-        height: 13em;
+        width: 79%;
+        height: 24em;
         border-radius: 500px;
-        background-color: brown;
+        background: brown;
         clear: both;
         margin-left : 120px;
+        max-width:100%;
+        max-height:100%;
     }
 </style>
 </body>
